--- a/angular/package.json
+++ b/angular/package.json
@@ -7,7 +7,11 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "lint": "ng lint"
+    "lint": "ng lint",
+    "dev:ssr": "ng run angular-ssr-app:serve-ssr",
+    "serve:ssr": "node dist/angular-ssr-app/server/main.js",
+    "build:ssr": "ng build && ng run angular-ssr-app:server",
+    "prerender": "ng run angular-ssr-app:prerender"
   },
   "private": true,
   "dependencies": {
@@ -18,7 +22,10 @@
     "@angular/forms": "~13.0.3",
     "@angular/platform-browser": "~13.0.3",
     "@angular/platform-browser-dynamic": "~13.0.3",
+    "@angular/platform-server": "~13.0.3",
     "@angular/router": "~13.0.3",
+    "@nguniversal/express-engine": "^13.0.1",
+    "express": "^4.15.2",
     "lodash-es": "^4.17.21",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
@@ -33,6 +40,8 @@
     "@angular-eslint/template-parser": "13.0.1",
     "@angular/cli": "~13.0.4",
     "@angular/compiler-cli": "~13.0.3",
+    "@nguniversal/builders": "^13.0.1",
+    "@types/express": "^4.17.0",
     "@types/jasmine": "~3.10.0",
     "@types/lodash-es": "^4.17.5",
     "@types/node": "^12.11.1",
